# tg-downloader

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  rust-toolchain.toml
nix/: overlay.nix  package.nix
src/: dlp_info.rs  downloader.rs  handler.rs  lib.rs  main.rs  url.rs  util.rs
src/error/: ext.rs  mod.rs
src/handler/: callback.rs  keyboard.rs
