[package]
name = "tiktok-downloader-tg-bot"
version = "0.1.0"
authors = ["lemarwin"]
edition = "2018"
default-run = "tiktok-downloader-tg-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
teloxide = {version = "0.15.0", features = ["rustls"]}
thiserror = "2.0.12"
tokio = {version = "1.44.2", features = ["macros", "process"]}
openssl = {version = "0.10.72", features = ["vendored"]}