[package]
name = "tiktok-downloader-tg-bot"
version = "0.1.0"
authors = ["lemarwin"]
edition = "2024"
default-run = "tiktok-downloader-tg-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
ez-ffmpeg = { version = "0.10.0", features = [ "async" ]}
futures = "0.3.32"
lazy-regex = "3.6.0"
openssl = { version = "0.10.75", features = [ "vendored" ] }
teloxide = { version = "0.17.0" }
tempfile = "3.27.0"
thiserror = "2.0.12"
tokio = {version = "1.44.2", features = [ "macros", "process" ]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = [ "default", "json", "env-filter", "fmt" ]}
async-tempfile = "0.7.0"
ffprobe = "0.4.0"
